--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -13,9 +13,7 @@ two:
   price: 9.99
 
 ruby:
-  title:      Programming Ruby
-  description: Ruby is the fastest growing and most exciting dynamic
-               language out there. If you need to get working programs
-               delivered fast, you should add Ruby to your toolbox
+  title: Programming Ruby 1.9
+  description: Ruby is the fastest growing and most exciting dynamic language out there. If you need to get working programs delivered fast, you should add Ruby to your toolbox.
   image_url: ruby.jpg
   price: 49.50
